--- a/private-service/Dockerfile
+++ b/private-service/Dockerfile
@@ -1,12 +1,32 @@
-FROM node:18-alpine
+# Stage de build
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install --production
 
+# Stage final
+FROM node:18-alpine
+
+# Créer un utilisateur non-root
+RUN addgroup -S nodeapp && adduser -S nodeapp -G nodeapp
+
+WORKDIR /app
+
+# Copier les dépendances du stage précédent
+COPY --from=builder /app/node_modules ./node_modules
 COPY . .
 
+# Définir les permissions correctes
+RUN chown -R nodeapp:nodeapp /app
+
+# Utiliser l'utilisateur non-root
+USER nodeapp
+
 EXPOSE 3000
+
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:3000/health || exit 1
 
 CMD ["node", "src/index.js"]
