--- a/private-service/package.json
+++ b/private-service/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "private-capsules-service",
-    "version": "1.0.0",
-    "description": "Service for private time capsules",
-    "main": "src/index.js",
-    "scripts": {
-      "start": "node src/index.js",
-      "dev": "nodemon src/index.js"
-    },
-    "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "pg": "^8.11.3"
-    },
-    "devDependencies": {
-      "nodemon": "^3.0.1"
-    }
+  "name": "private-capsules-service",
+  "version": "1.0.0",
+  "description": "Service for private time capsules",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "ioredis": "^5.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
+}
